jdk:21, gradle:8.13